# ledgerdb_MPT

./: CMakeLists.txt  README.md
include/: ledgerdb.h  merkletree.h  types.h
include/common/: chunk.h  db.h  myhash.h  utils.h
include/mpt/: mpt_delta.h  mpt_node.h  trie.h
include/skiplist/: skiplist.h
src/: chunk.cpp  hash.cpp  ledgerdb.cpp  merkletree.cpp  mpt_node.cpp  skiplist.cpp  trie.cpp  utils.cpp
test/: test_hash.cpp  test_merkle_tree.cpp  test_mpt.cpp
